--- a/birdsite/birdnotes/templates/birdnotes/observations/list.html
+++ b/birdsite/birdnotes/templates/birdnotes/observations/list.html
@@ -31,7 +31,8 @@
                                     <h5 class="card-title observation-title">{{obs.species}}</h5>
                                     <p class="text-muted">{{obs.species.latin_name}}</p>
                                     <div class="card-text">
-                                        <p><b>Appearance:</b> {{obs.appearance|truncatewords:8|linebreaks}}</p>
+                                        <p><b>Behaviour: </b>{{obs.behaviour}}</p>
+                                        <p><b>Number of birds: </b>{{obs.number}}</p>
                                         <p><b>Place:</b> {{obs.place}}</p>
                                         <p><b>Date:</b> {{obs.time}}</p>
                                     </div>
