--- a/birdsite/birdnotes/templates/birdnotes/base.html
+++ b/birdsite/birdnotes/templates/birdnotes/base.html
@@ -32,6 +32,31 @@
           <li class="nav-item">
             <a class="nav-link" href="#">Contact</a>
           </li>
+            {% if request.user.is_authenticated %}
+<!--            <li class="nav-item nav-link">{{request.user}}</li>-->
+          <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Account
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <li class="dropdown-item menu-item disabled">You are signed in as {{request.user}}.</li>
+            <li><a class="dropdown-item menu-item" href="#">Log out</a></li>
+          </ul>
+        </li>
+            {% else %}
+            <li>
+                <div class="btn-group ms-2" role="group" aria-label="Basic checkbox toggle button group">
+                  <a href="{% url 'birdnotes:login' %}">
+                    <input type="button" class="btn-check" id="btncheck1" autocomplete="off">
+                  <label class="btn btn-outline-primary light-btn" for="btncheck1">Sign In</label>
+                  </a>
+                  <a href="#">
+                  <input type="button" class="btn-check" id="btncheck2" autocomplete="off">
+                  <label class="btn btn-outline-primary light-btn" for="btncheck2">Sign Up</label>
+                  </a>
+                </div>
+            </li>
+            {% endif %}
         </ul>
       </div>
     </div>
@@ -39,7 +64,11 @@
 
   {% block content %}
   {% endblock %}
-
+<div class="footer">
+  <div class="container p-3 mt- text-center">
+  <h6 class="fst-italic mb-0">&copy; Copyright <strong> BirdNotes </strong> Paulina Zając</h6>
+  </div>
+</div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
