create landing page

--- a/birdsite/birdnotes/templates/birdnotes/base.html
+++ b/birdsite/birdnotes/templates/birdnotes/base.html
@@ -16,7 +16,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top" id="header">
     <div class="container">
-      <a class="navbar-brand text-uppercase logo" href="{% url 'birdnotes:observations_list' %}">Birdnotes</a>
+      <a class="navbar-brand text-uppercase logo" href="{% url 'birdnotes:landing' %}">Birdnotes</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler"
         aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
