--- a/birdsite/birdnotes/static/css/style.css
+++ b/birdsite/birdnotes/static/css/style.css
@@ -1,5 +1,6 @@
 body{
     background-color: #f7fbfe;
+    /* background-color: #ebebeb; */
     color:#444444;
     font-family: 'Open Sans', sans-serif;
     
@@ -107,6 +108,15 @@ hr{
      background-color: #eff7fd;
 
 
+ }
+
+ .landing-header{
+    text-shadow: 0px 4px 4px rgba(150, 150, 150, 1);
+
+ }
+
+ .landing-button{
+    text-shadow: 0px 3px 5px rgba(150, 150, 150, 1);
  }
 
 @media only screen and (max-width: 600px) {
