--- a/birdsite/birdnotes/templates/birdnotes/observations/edit.html
+++ b/birdsite/birdnotes/templates/birdnotes/observations/edit.html
@@ -32,6 +32,9 @@
                         {% endfor %}
                         <input type="submit" value="SAVE" class="btn standard-btn text-white">
                     </form>
+                    <a href="{{ observation.get_absolute_url }}">
+                        <button class="btn mt-2 standard-btn text-white">BACK</button>
+                    </a>
                 </div>
                 <a href="#">
                 </a>
