--- a/birdsite/birdnotes/static/css/style.css
+++ b/birdsite/birdnotes/static/css/style.css
@@ -26,7 +26,7 @@ body{
 .section-title{
     letter-spacing: 1px;
     margin-top: 5rem;
-
+    
 }
 
 
@@ -72,6 +72,11 @@ a, a:hover, a:visited, a:active {
 .menu-item:hover{
        background-color: #2387ca;
        color: white;
+}
+
+.pagination-item{
+    background-color: #3498db !important; 
+    border: none !important;
 }
 
 
