fix pagination active link

--- a/birdsite/birdnotes/templates/birdnotes/observations/list.html
+++ b/birdsite/birdnotes/templates/birdnotes/observations/list.html
@@ -21,7 +21,7 @@
             {% endif %}
 
             <li class="page-item active">
-            <a class="page-link pagination-item" href="?page={{page}}"> {{ page.number }}</a>
+            <a class="page-link pagination-item" href="?page={{page.number}}"> {{ page.number }}</a>
             </li>
 
             {% if page.has_next %}
