--- a/birdsite/birdnotes/templates/birdnotes/observations/edit.html
+++ b/birdsite/birdnotes/templates/birdnotes/observations/edit.html
@@ -30,10 +30,15 @@
                             <p class="text-danger">{{error}}</p>
                             {% endfor %}
                         {% endfor %}
-                        <input type="submit" value="SAVE" class="btn standard-btn text-white">
+                        <input type="submit" value="SAVE" class="btn light-btn">
                     </form>
                     <a href="{{ observation.get_absolute_url }}">
-                        <button class="btn mt-2 standard-btn text-white">BACK</button>
+                        <button class="btn mt-2 light-btn">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"/>
+                        </svg>
+                        BACK
+                        </button>
                     </a>
                 </div>
                 <a href="#">
