--- a/birdsite/birdnotes/templates/birdnotes/observations/list.html
+++ b/birdsite/birdnotes/templates/birdnotes/observations/list.html
@@ -34,7 +34,7 @@
         </nav>
         {% endwith %}
         <a href="{% url 'birdnotes:add_observation' %}">
-            <button class="btn standard-btn text-white">ADD NEW</button>
+            <button class="btn light-btn">ADD NEW</button>
         </a>
         <div class="row g-5 mt-1">
 
