add basic about page

--- a/birdsite/birdnotes/static/css/style.css
+++ b/birdsite/birdnotes/static/css/style.css
@@ -91,7 +91,7 @@ hr{
     font-size: 25px;
     letter-spacing: 2px;
     font-weight: 500;
-    color: #2387ca !important;
+    color: #3195bd !important;
 }
 
 /* Detail view */
