--- a/birdsite/birdnotes/static/css/style.css
+++ b/birdsite/birdnotes/static/css/style.css
@@ -124,6 +124,10 @@ hr{
     text-shadow: 0px 3px 5px rgba(150, 150, 150, 1);
  }
 
+ li {
+     letter-spacing: 1px;
+ }
+
 @media only screen and (max-width: 600px) {
     .observation-detail {  
       width: 70%;
