--- a/birdsite/birdnotes/templates/birdnotes/about.html
+++ b/birdsite/birdnotes/templates/birdnotes/about.html
@@ -4,27 +4,47 @@
 {% block content %}
 {% load bootstrap5 %}
 
-<section class="section" style="height:100vh;">
-<div class="container pt-5">
-    <div class="row">
-        <div class="col-md-6">
-            <img src="{% static "images/binoculars.jpg" %}" alt="">
-        </div>
-        <div class="col-md-6 d-flex align-items-center">
-            <div class="text-end">
-            <h2 style="color:#3195bd;">All your <strong>BirdNotes</strong> in one place!</h2>
-            <ul class="text-start my-4">
-                <li class="lead">access at any time</li>
-                <li class="lead">free for everyone</li>
-                <li class="lead">no limits</li>
-            </ul>
+<section class="section" style="min-height:100vh;">
+<div class="container pt-1">
 
-            <p class="text-start">
-                Select the species of bird you observed. Enter the details of your observation. Add picture. And that's all!</p>
+    <h2 class="text-center section-title">About</h2>
+        <hr class="mx-auto" style="width:10%">
+    <div class="row">
+        <div class="col-lg-6 my-3">
+            <img class="" src="{% static "images/binoculars.jpg" %}" alt="" style="max-width: 100%;">
+        </div>
+        <div class="col-lg-6 d-flex align-items-center my-3">
+            <div>
+                <h2 class="text-center" style="color:#3195bd;">All your <strong>BirdNotes</strong> in one place!</h2>
+                <div class="d-flex justify-content-center">
+                    <ul class="my-4 list-unstyled">
+                        <li class="lead my-3">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="#3195bd" class="bi bi-clock me-3" viewBox="0 0 16 16">
+                                <path d="M8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71V3.5z"/>
+                                <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm7-8A7 7 0 1 1 1 8a7 7 0 0 1 14 0z"/>
+                            </svg>
+                            access at any time</li>
+                        <li class="lead my-3">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="#3195bd" class="bi bi-door-open me-3" viewBox="0 0 16 16">
+                                <path d="M8.5 10c-.276 0-.5-.448-.5-1s.224-1 .5-1 .5.448.5 1-.224 1-.5 1z"/>
+                                <path d="M10.828.122A.5.5 0 0 1 11 .5V1h.5A1.5 1.5 0 0 1 13 2.5V15h1.5a.5.5 0 0 1 0 1h-13a.5.5 0 0 1 0-1H3V1.5a.5.5 0 0 1 .43-.495l7-1a.5.5 0 0 1 .398.117zM11.5 2H11v13h1V2.5a.5.5 0 0 0-.5-.5zM4 1.934V15h6V1.077l-6 .857z"/>
+                            </svg>
+                            free for everyone</li>
+                        <li class="lead my-3">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="#3195bd" class="bi bi-check2-circle me-3" viewBox="0 0 16 16">
+                                <path d="M2.5 8a5.5 5.5 0 0 1 8.25-4.764.5.5 0 0 0 .5-.866A6.5 6.5 0 1 0 14.5 8a.5.5 0 0 0-1 0 5.5 5.5 0 1 1-11 0z"/>
+                                <path d="M15.354 3.354a.5.5 0 0 0-.708-.708L8 9.293 5.354 6.646a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l7-7z"/>
+                            </svg>
+                            no limits</li>
+                    </ul>
+                </div>
+
+                <p class="text-center">
+                    Select the species of bird you observed. Enter the details of your observation. Add picture. And that's all!</p>
             </div>
         </div>
 
-        </div>
+        <!-- </div> -->
     </div>
 </div>
 
